
2022-04-x [8.0.4]
--------------------------------------------------
firewall                  - fix issue where seldomly backbone connection was created through
                            freifunk network / freifunk gateway

2022-04-15 [8.0.3]
--------------------------------------------------
wifi                      - change ath10 firmware for more stable connection for Fritzbox 4040
                          - ath10k, disable dnyack (could be the reason for bad connections 
                            speeds for IPQ4018 (fritzbox 4040)
                            Targets with this chip are not stable with openwrt. 
                          - disable adhoc per default (which is not supported by some wifi
                            firmwares and is replaced with 802.11s)
openwrt                   - update to 21.02.2
network                   - add option to force ethernet port to 100mbit/s (only "big" routers)
LED                       - fix LED for xiaomi router


2022-04-00 [8.0.2]
--------------------------------------------------
usb-tethering             - add usb tethering for android/iOS (for selected devices)
gui-ajax                  - add info when using ajax request
                          - rework firmware download to avoid blocking when loading firmware infos
                          - serveral minor improvments

2022-04-00 [8.0.1]
--------------------------------------------------
openwrt 21                - upgrade to openwrt 21 (only from devices with openwrt 19)
network                   - complete rework of internal network configuration
                            (needed to support openwrt 21 and vlan meshing)
mesh-lan                  - add meshing on vlan 9 (avoids need of bridging cable
                            between wan and lan ports that causes issues on some devices)
wifi-roaming              - add light roaming (hotspot should use same gateway and should