@@ -643,12 +643,12 @@ upgrade_8_0_2()
 
 upgrade_8_0_3()
 {
-  eval $(cat /etc/board.json | jsonfilter -e model='@.model.id' -e model2='@.model.name')
-	case "$model"	in
-		"avm,fritzbox-4040")
-			uci set ddmesh.network.mesh_mode='mesh'
-			;;
-	esac
+	true
+}
+
+upgrade_8_0_4()
+{
+	uci set ddmesh.network.mesh_mode='mesh'
 }
 
 ##################################
